pyconde/skins/ep14/static/assets/sass/_sponsorship.scss
.cmsplugin-sponsorlist {
    padding: 50px 0;

    ul.sponsor-list {
        list-style: none;
        padding: 0;

        li {
            padding: 0 14px;
            display: inline-block !important;
            opacity: 0.3;
            filter: url(../images/filters.svg#grayscale);
            filter: gray; /* IE6-9 */
            -webkit-filter: grayscale(1); /* Google Chrome, Safari 6+ & Opera 15+ */
            &:hover {
                opacity: 1;
                filter: none;
                -webkit-filter: none;
            }
            &:before {
                display: none;
            }

            a {
                display: table-cell;
                width: 112px;
                height: 55px;
                text-align: center;
                vertical-align: middle;

                img {
                    max-width: 112px;
                    max-height: 55px;
                    vertical-align: middle;
                }
            }
        }
    }
}
#content .sponsorship {
    &.list {
        .level {
            h2 {
                /* headlines with lines from http://jsfiddle.net/gKve7/ */
                color: $red;
                text-align: center;
                overflow: hidden;
                margin-bottom: 60px;

                & > span{
                    position: relative;
                    display: inline-block;
                    &:before, &:after{
                        content: '';
                        position: absolute;
                        top: 51%;
                        border-bottom: 1px solid;
                        width: $row-width/2;
                        margin: 0 20px;
                    }
                    &:before{
                        right: 100%;
                    }
                    &:after{
                        left: 100%;
                    }
                }

                &:not(:first-child) {
                    padding-top: 4rem;
                }
            }
            .sponsor-item {
                font-size: 14px;
                font-size: 1.4rem;
                margin-bottom: 60px;

                h3 {
                    text-align: center;
                    line-height: 100px;
                    margin: 0;
                    padding: 0;
                }
                .desc {
                }
                .meta {
                    dt {
                        font-weight: 700;
                    }
                    dd {
                        margin-left: 0;
                    }
                }
            }
        }
        @media #{$medium-up} {
            .level.sponsorcount-1 .sponsor-item {
                h3 {
                    float: left;
                    margin-top: 0;
                }
                .desc, .meta {
                    margin-left: 300px;
                }
            }
        }
    }
}

